# SimpleNeuralNetwork

./: DEMO.py  LICENSE  README.md  __init__.py  model_save_test.npz  pyproject.toml  setup.py
Demo/: Generate_dataset.py
src_SimpleNeuralNetwork/: main.py
src_SimpleNeuralNetwork/Fonction/: layers.py  standardization.py
src_SimpleNeuralNetwork/Function/: Activation_fonction.py  Main_model.py  io.py
